input fix bug gap right

--- a/src/components/common/Input/style.module.css
+++ b/src/components/common/Input/style.module.css
@@ -6,6 +6,7 @@
     height: 76px;
     font-size: 18px;
     font-family: 'Heebo';
+    padding: 2%;
 
 
 }
